<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    tools:context="com.fortitude.shamsulkarim.ieltsfordory.ui.MainActivity">



    <FrameLayout
        android:id="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="-15dp"
        >


    </FrameLayout>


    <LinearLayout
        android:id="@+id/bottom_background"
        android:background="@color/card_background_color"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"

        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:strokeColor="@color/card_background_color"
            app:strokeWidth="1dp"
            app:backgroundTint="@color/card_background_color"
            app:rippleColor="@color/colorPrimary"
            app:icon="@drawable/ic_home"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/word_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:strokeColor="@color/card_background_color"
            app:strokeWidth="1dp"
            app:backgroundTint="@color/card_background_color"
            app:rippleColor="@color/colorPrimary"
            app:icon="@drawable/ic_words"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/learned_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:strokeColor="@color/card_background_color"
            app:strokeWidth="1dp"
            app:backgroundTint="@color/card_background_color"
            app:rippleColor="@color/colorPrimary"
            app:icon="@drawable/ic_learned"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favorite_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:strokeColor="@color/card_background_color"
            app:strokeWidth="1dp"
            app:backgroundTint="@color/card_background_color"
            app:rippleColor="@color/colorPrimary"
            app:icon="@drawable/ic_favorite_icon"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="15dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:strokeColor="@color/card_background_color"
            app:strokeWidth="1dp"
            app:backgroundTint="@color/card_background_color"
            app:rippleColor="@color/colorPrimary"
            app:icon="@drawable/ic_person"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:cornerRadius="100dp"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="2dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:baselineAligned="false">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <View
                android:id="@+id/home_bottom_line"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_bar_dot" />
        </RelativeLayout>



        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <View
                android:visibility="invisible"
                android:id="@+id/words_bottom_line"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_bar_dot" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <View
                android:visibility="invisible"
                android:id="@+id/learned_bottom_line"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_bar_dot" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <View
                android:id="@+id/favorite_bottom_line"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_bar_dot"
                android:visibility="invisible" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <View
                android:visibility="invisible"
                android:id="@+id/profile_bottom_line"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/bottom_bar_dot" />

        </RelativeLayout>


    </LinearLayout>


    <View
        android:layout_above="@+id/bottom_background"
        android:background="@drawable/bottom_shadow"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="0dp" />





</RelativeLayout>
