...
                    app:SpinKit_Color="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/favorite_speaker"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/favorite"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="0dp"
                    android:padding="0dp"
...

            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView

                android:id="@+id/favorite_card_translation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/keyline_4"
                android:layout_marginTop="@dimen/keyline_4"
                android:layout_marginEnd="@dimen/keyline_4"
                android:text="@string/this_is_an_translation"
...
