...
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:textColor="@color/secondary_text_color"
        android:textSize="16sp"
        android:text="@string/trial_info_description"
        app:layout_constraintBottom_toTopOf="@+id/start_trial_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_trial_button"
        android:layout_width="wrap_content"
...
